<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stock_row_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/stock_symbol"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/stock_symbol"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="165dp"
        android:layout_height="17dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/company_name"
        android:textAlignment="viewStart"
        android:textColor="#4CAF50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_price" />

    <TextView
        android:id="@+id/stock_price"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:text="@string/stock_price"
        android:textAlignment="viewStart"
        android:textColor="#4CAF50"
        app:layout_constraintStart_toEndOf="@+id/stock_symbol"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_change"
        android:layout_width="69dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/price_change"
        app:layout_constraintStart_toEndOf="@+id/stock_price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change_percentage"
        android:layout_width="46dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/change_percentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="16dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/stockarrows"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_arrow_positive_price" />
</androidx.constraintlayout.widget.ConstraintLayout>
